Introduce XML parsing (not full) and fix a crash when you swap parser to quickly, add scrollbars to CodeArea

--- a/src/com/notnotme/jfxparser/ui/fxml/style.css
+++ b/src/com/notnotme/jfxparser/ui/fxml/style.css
@@ -18,3 +18,8 @@
     -fx-background-color: -fx-focus-color, -fx-cell-focus-inner-border, -fx-focus-color;
     -fx-background-insets: 0, 1, 2;
 }
+
+.styled-text-area .selection {
+    -fx-fill: #cccccc;
+    -fx-stroke-width: 0;
+}
